--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "NetworkManager-0.9.6.4.tar.xz:"	e2c89a8a0e17ce872922be91841dc7c15d1c05ec
-  "README.urpmi:"	57fd21ae93a4f6545f9fba772b5b6354f73b0469
+  NetworkManager-0.9.6.4.tar.xz: e2c89a8a0e17ce872922be91841dc7c15d1c05ec
+  README.urpmi: 57fd21ae93a4f6545f9fba772b5b6354f73b0469
