--- a/00-wifi-backend.conf
+++ b/00-wifi-backend.conf
@@ -1,2 +1,5 @@
 [device]
-wifi.backend=iwd
+# IWD is in many ways better, but currently has problems
+# with most non-Intel chipsets.
+#wifi.backend=iwd
+wifi.backend=wpa_supplicant
