update config file

--- a/NetworkManager.conf
+++ b/NetworkManager.conf
@@ -1,8 +1,8 @@
 [main]
-plugins=ifcfg-rh,keyfile
+plugins=keyfile
 dhcp=internal
 dns=default
-rc-manager=file
+rc-manager=symlink
 
 [logging]
 level=WARN
